# C-Collections

./: .gitignore  README.md  main.c
collections/: node.h
collections/hashmap/: hashmap.c  hashmap.h
collections/list/: list.c  list.h
collections/queue/: queue.c  queue.h
docs/: annotated.html  annotated_dup.js  classes.html  dir_334d3ce65128523af709cd741c23813c.html  dir_63d283d57b50ef3832c90fc8aeff243e.html  dir_95e29a8b8ee7c54052c171a88bb95675.html  dir_abd213e5aa7d55a2e4f938e9fd68a1e3.html  dir_abd213e5aa7d55a2e4f938e9fd68a1e3.js  dir_acd1ec9753d35c14093b5a0ab60f7aa9.html  dir_acd1ec9753d35c14093b5a0ab60f7aa9.js  dir_cfd8cad10ecd3edb3f27388d7806eec6.html  dir_d5762d0567c4c00fccbddb05db217c60.html  dir_d5762d0567c4c00fccbddb05db217c60.js  dir_fe179f5a0cd46862189cb836271fc7bc.html  dir_fe179f5a0cd46862189cb836271fc7bc.js  docs.html  files.html  files.js  globals.html  globals_func.html  hashmap_8c.html  hashmap_8c.js  hashmap_8c__incl.dot  hashmap_8c__incl.md5  hashmap_8h.html  hashmap_8h.js  hashmap_8h__dep__incl.dot  hashmap_8h__incl.dot  hashmap_8h__incl.md5  hashmap_8h_source.html  index.html  list_8c.html  list_8c__incl.dot  list_8c__incl.md5  list_8h_source.html  navtreedata.js  navtreeindex0.js  node_8h_source.html  queue_8c.html  queue_8c__incl.dot  (+29 more)
docs/search/: all_0.js  (+7 more)
list/: list.c  list.h
src/: CMakeLists.txt  main.c
src/collections/hashmap/: hashmap.c  hashmap.h
src/collections/list/: list.c  list.h
src/collections/queue/: queue.c  queue.h
src/collections/stack/: stack.c
src/collections/tree/: binarysearchtree.c  binarysearchtree.h
(+167 files in other folders)
